--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "svgr": "zsh -c 'npx @svgr/cli --typescript --out-dir src/assets/icons/components src/assets/icons/svg/$0'"
     },
     "dependencies": {
+        "lodash": "^4.17.21",
         "react": "^18.0.0",
         "react-dom": "^18.0.0",
         "react-markdown": "^8.0.3",
@@ -17,6 +18,7 @@
     },
     "devDependencies": {
         "@svgr/cli": "^6.2.1",
+        "@types/lodash": "^4.14.182",
         "@types/react": "^18.0.0",
         "@types/react-dom": "^18.0.0",
         "@typescript-eslint/eslint-plugin": "^5.30.5",
