--- a/package.json
+++ b/package.json
@@ -7,18 +7,24 @@
         "build": "tsc && vite build",
         "preview": "vite preview",
         "lint": "eslint .",
-        "svgr": "zsh -c 'npx @svgr/cli --typescript --out-dir src/assets/icons/components src/assets/icons/svg/$0'"
+        "svgr": "zsh -c 'npx @svgr/cli --typescript --out-dir src/assets/icons/components src/assets/icons/svg/$0'",
+        "new:post": "ts-node src/commands/new-post.ts"
     },
     "dependencies": {
+        "@types/moment": "^2.13.0",
         "lodash": "^4.17.21",
+        "moment": "^2.29.4",
         "react": "^18.0.0",
         "react-dom": "^18.0.0",
         "react-markdown": "^8.0.3",
-        "react-router-dom": "6"
+        "react-router-dom": "6",
+        "remark-gfm": "^3.0.1"
     },
     "devDependencies": {
         "@svgr/cli": "^6.2.1",
         "@types/lodash": "^4.14.182",
+        "@types/minimist": "^1.2.2",
+        "@types/node": "^18.0.6",
         "@types/react": "^18.0.0",
         "@types/react-dom": "^18.0.0",
         "@typescript-eslint/eslint-plugin": "^5.30.5",
@@ -26,8 +32,10 @@
         "@vitejs/plugin-react": "^1.3.0",
         "autoprefixer": "^10.4.7",
         "eslint": "^8.19.0",
+        "minimist": "^1.2.6",
         "postcss": "^8.4.14",
         "tailwindcss": "^3.1.4",
+        "ts-node": "^10.9.1",
         "typescript": "^4.7.4",
         "vite": "^2.9.9"
     }
