--- a/package.json
+++ b/package.json
@@ -12,15 +12,18 @@
     },
     "dependencies": {
         "@types/moment": "^2.13.0",
+        "github-markdown-css": "^5.1.0",
+        "highlight.js": "^11.6.0",
         "lodash": "^4.17.21",
+        "markdown-it": "^13.0.1",
         "moment": "^2.29.4",
         "react": "^18.0.0",
         "react-dom": "^18.0.0",
         "react-markdown": "^8.0.3",
-        "react-router-dom": "6",
-        "remark-gfm": "^3.0.1"
+        "react-router-dom": "6"
     },
     "devDependencies": {
+        "@babel/preset-react": "^7.18.6",
         "@svgr/cli": "^6.2.1",
         "@types/lodash": "^4.14.182",
         "@types/minimist": "^1.2.2",
@@ -37,6 +40,7 @@
         "tailwindcss": "^3.1.4",
         "ts-node": "^10.9.1",
         "typescript": "^4.7.4",
-        "vite": "^2.9.9"
+        "vite": "^2.9.9",
+        "vite-plugin-markdown": "^2.1.0"
     }
 }
