--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
         "new:post": "ts-node src/commands/new-post.ts"
     },
     "dependencies": {
-        "@types/moment": "^2.13.0",
         "github-markdown-css": "^5.1.0",
         "highlight.js": "^11.6.0",
         "lodash": "^4.17.21",
@@ -20,16 +19,20 @@
         "react": "^18.0.0",
         "react-dom": "^18.0.0",
         "react-markdown": "^8.0.3",
-        "react-router-dom": "6"
+        "react-router-dom": "6",
+        "vite-plugin-markdown": "^2.1.0",
+        "@modyfi/vite-plugin-yaml": "^1.0.3"
     },
     "devDependencies": {
         "@babel/preset-react": "^7.18.6",
         "@svgr/cli": "^6.2.1",
         "@types/lodash": "^4.14.182",
         "@types/minimist": "^1.2.2",
-        "@types/node": "^18.0.6",
+        "@types/moment": "^2.13.0",
+        "@types/node": "^18.7.6",
         "@types/react": "^18.0.0",
         "@types/react-dom": "^18.0.0",
+        "@types/yamljs": "^0.2.31",
         "@typescript-eslint/eslint-plugin": "^5.30.5",
         "@typescript-eslint/parser": "^5.30.5",
         "@vitejs/plugin-react": "^1.3.0",
@@ -41,6 +44,6 @@
         "ts-node": "^10.9.1",
         "typescript": "^4.7.4",
         "vite": "^2.9.9",
-        "vite-plugin-markdown": "^2.1.0"
+        "yamljs": "^0.3.0"
     }
 }
