new: add fonts new: fix styling

--- a/src/contents/index.yml
+++ b/src/contents/index.yml
@@ -3,3 +3,4 @@ blogs:
     filename: 20220818-does-your-code-base-smell
     slug: does-your-code-base-smell
     title: 'Does Your Code Base Smell'
+    createdAt: '18th Aug 2022'
