post: strangling tech debt new: undo ugly font new: remove placeholder new: add about me

--- a/src/contents/index.yml
+++ b/src/contents/index.yml
@@ -1,6 +1,6 @@
 blogs:
-  20220818-does-your-code-base-smell:
-    filename: 20220818-does-your-code-base-smell
-    slug: does-your-code-base-smell
-    title: 'Does Your Code Base Smell'
-    createdAt: '18th Aug 2022'
+  20220824-stragling-your-tech-debt:
+    filename: 20220824-stragling-your-tech-debt
+    slug: strangling-your-tech-debt-and-squeeze-out-any-usefulness-from-it
+    title: 'Strangling your tech debt and squeeze out any usefulness from it!'
+    createdAt: '24th Aug 2022'
