--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
         "preview": "vite preview",
         "lint": "eslint .",
         "svgr": "zsh -c 'npx @svgr/cli --typescript --out-dir src/assets/icons/components src/assets/icons/svg/$0'",
-        "new:post": "ts-node src/commands/new-post.ts"
+        "new:post": "ts-node src/commands/new-post.ts",
+        "postinstall": "husky install"
     },
     "dependencies": {
         "@modyfi/vite-plugin-yaml": "^1.0.3",
@@ -41,6 +42,7 @@
         "@vitejs/plugin-react": "^1.3.0",
         "autoprefixer": "^10.4.7",
         "eslint": "^8.19.0",
+        "husky": "^8.0.1",
         "minimist": "^1.2.6",
         "postcss": "^8.4.14",
         "tailwindcss": "^3.1.4",
